--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,6 +42,7 @@
           .navbar-item.has-dropdown.is-hoverable
             %a.navbar-link Who?
             .navbar-dropdown
+              = link_to 'About', page_path('about-me'), class: 'navbar-item'
               = link_to 'CV', '/cv', class: 'navbar-item'
               = link_to 'Discography', 'http://static.icewhistle.com/discog/', class: 'navbar-item'
               = link_to 'Contact', '/contact', class: 'navbar-item'
@@ -102,17 +103,18 @@
               %li= link_to 'Discography', 'http://static.icewhistle.com/discog/'
           .column
             %ul
+              %li= link_to 'Kuusi Palaa', 'https://kuusipalaa.fi/', target: :_blank
               %li= link_to 'Temporary', 'https://temporary.fi', target: :_blank
               %li= link_to 'Living Spaces', 'http://livingspaces.pixelache.ac', :target => :_blank
               %li= link_to 'Ptarmigan', 'http://ptarmigan.ee', :target => :_blank
 
-              %li= link_to 'Project Blood Team', 'http://bloodteam.com', :target => :_blank
+
               %li= link_to 'Cenotaph', 'http://cenotaph.org', :target => :_blank
               -#%li= link_to 'Lied Music', 'http://liedmusic.co.uk', :target => :_blank
           .column
             %ul
               %li= link_to 'Twitter', 'http://twitter.com/hyksos', :target => :_blank
-              %li= link_to 'RSS', 'http://feeds.feedburner.com/IcewhistleAll/'
+              %li= link_to 'RSS', '/feeds'
               %li= link_to 'GitHub', 'http://github.com/cenotaph', :target => :_blank
               %li
                 -#%a{:href =>"#",  :"data-dropdown"=> "other_projects",  :class => "dropdown tiny"} Other projects
