--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -6,7 +6,7 @@
   
   .columns
     .column.is-three-fifths
-      = raw @page.body
+      .page_body= raw @page.body
 
     - if @page.image?
       .column.is-two-fifths
