discard old posts

--- a/app/assets/stylesheets/cms.css.scss
+++ b/app/assets/stylesheets/cms.css.scss
@@ -19,3 +19,13 @@
 .post {
   min-height: 90vh;
 }
+
+table {
+  tbody {
+    tr.deleted {
+      td {
+        text-decoration: line-through;
+      }
+    }
+  }
+}
