upgrade to rails 2.6.1 and display smaller images nicely on posts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -135,3 +135,12 @@ footer.footer {
     }
   }
 }
+
+.small_image {
+  background-color: #c7d67e;
+  figure.image {
+    &.smaller {
+      margin: 0 auto;
+    }
+  }
+}
