--- a/app/views/admin/posts/index.html.haml
+++ b/app/views/admin/posts/index.html.haml
@@ -8,7 +8,7 @@
       =paginate @posts   
 
   .columns
-    .columns
+    .column
       %table
         %thead
           %tr 
@@ -26,5 +26,5 @@
                 = link_to 'Show', post, :target => :_blank, :class => [:button, :round, :tiny]
                 = link_to 'Edit', edit_admin_post_path(post), :class => [:button, :round, :tiny]
                 = link_to 'Destroy', [:admin, post], :method => :delete, :data => {:confirm => 'Are you sure?'}, :class => [:button, :round, :tiny, :alert]
-.row
-  .small-10.columns= paginate @posts          
+  .columns
+    .columns= paginate @posts          
