--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,7 +2,8 @@
   - if @post.image_width > 1200
     %figure.image= image_tag @post.image.url.gsub(/development/, 'production')
   - else 
-    %figure.image= image_tag @post.image.url
+    .small_image
+      %figure.image.smaller{style: "width: #{@post.image_width}px"}= image_tag @post.image.url
 .post.container
 
   %h1.post_title= raw @post.title
