css changes for SI

--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,10 +1,10 @@
-.post_container
-  .post
-    %h3 Next appearance: 
-    There are no future SI shows currently scheduled at this time. If you'd like to hire Serious Introspection for your wedding, party, bar mitzvah, corporate event or other occasion, please contact us via 
-    = link_to 'SI Services.', 'http://services.seriousintrospection.fi/' 
+-# .post_container
+-#   .post
+-#     %h3 Next appearance: 
+-#     There are no future SI shows currently scheduled at this time. If you'd like to hire Serious Introspection for your wedding, party, bar mitzvah, corporate event or other occasion, please contact us via 
+-#     = link_to 'SI Services.', 'http://services.seriousintrospection.fi/' 
 
-    %br/
+-#     %br/
    
     
 .post_container
