--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,8 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .date {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  margin: 0.8rem 0;
 }
 .container.has-text-centered, section#recent_posts, .post {
   padding: 1.5rem 0;
@@ -109,7 +110,7 @@ h3.section_heading {
 }
 
 .content.post_body {
-  padding: 1.25rem 0;
+  padding: 0 0 1.25rem 0;
 }
 
 .page_body {
