--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -83,6 +83,9 @@ a.readmore-js-toggle {
     }
 
   }
+  .post_sidebar {
+    display:none;
+  }
   .post_container {
     background-color: #FFFFFF;
 //    opacity: 0.9;
@@ -107,7 +110,7 @@ a.readmore-js-toggle {
       margin-bottom: 1.5rem;
       padding-bottom: 1.5rem;
       border-bottom: 1px dotted $sigreen2;
-      
+
       .post_description {
         margin-top: 0.4rem;
         font-size: 0.85rem;
@@ -153,6 +156,15 @@ a.readmore-js-toggle {
   float: right;
   width: 96%;
   margin-right: 2%;
+  .post_title {
+    line-height: 2.4rem;
+    margin: 0.8rem 0;
+  }
+
+  .date {
+    font-size: 0.9rem;
+    margin-bottom: 0.8rem;
+  }
   h1 {
     font-size: 2rem;
     color: $sigreen;
@@ -165,12 +177,14 @@ a.readmore-js-toggle {
   }
   .post_body {
     width: 100%;
+    line-height: 1.6rem;
   }
   .post_tags, .prev_next {
     display: none;
   }
   .is-three-fifths {
-    width: 80%;
+    padding-top: 1rem;
+    width: 100%;
   }
 
   .sidebar {
@@ -229,9 +243,13 @@ footer.footer {
     h1.si_title {
       font-size: 6vw;
       float: none;
+      margin-left: 1rem;
     }
     .menu {
       ul {
+        &.top_menu {
+          margin-left: 1rem;
+        }
         li {
           padding-right: 8.5vw;
           font-size: 3.55vw;
@@ -241,7 +259,7 @@ footer.footer {
     .post {
 
       h3 {
-        font-size: 1.2rem;
+        font-size: 1.25rem;
         line-height: 1.4rem;
         
       }
