--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,7 +7,8 @@
 .post.container
 
   %h1.post_title= raw @post.title
-  %em.date= "posted: " + l(@post.created_at, :format => :long   )
+  .date
+    %em= "posted: " + l(@post.created_at, :format => :long   )
 
   - if @post.photos.empty?
     .columns
