--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -23,21 +23,21 @@
     .content.readmore= raw post.body      
     - if post.extended
       = link_to 'Read more', post, :class => [:button, :tiny]
-- if post.videos.empty?
-  = content_for :jquery do
-    :plain
-      $('.readmore').readmore({
-        speed: 75,
-        moreLink: '<a style="margin-top: 10px" class="button tiny" href="#">Read more</a>',
-        lessLink: '<a class="button tiny" href="#">Close</a>',
-        maxHeight: 600
-        });
-- else
-  .row
-    .small-12.columns
-      - post.videos.each do |video|
-        .videocontent
-          %video{src: video.url, controls: "true", style: "width: 100%; height: 100%", height: "100%", width: "100%"}
+  - if post.videos.empty?
+    = content_for :jquery do
+      :plain
+        $('.readmore').readmore({
+          speed: 75,
+          moreLink: '<a style="margin-top: 10px" class="button tiny" href="#">Read more</a>',
+          lessLink: '<a class="button tiny" href="#">Close</a>',
+          maxHeight: 600
+          });
+  - else
+    .columns
+      .column.is-8.is-offset-2.has-text-justified
+        - post.videos.each do |video|
+          .videocontent
+            %video{src: video.url, controls: "true", style: "width: 100%; height: 100%", height: "100%", width: "100%"}
 - unless post.videos.empty? && post.audiopodcasts.empty?
   = content_for :jquery do
     :plain
