--- a/app/views/layouts/seriousintrospection.html.haml
+++ b/app/views/layouts/seriousintrospection.html.haml
@@ -38,6 +38,8 @@
             .is-clearfix
           = yield
         .column.right_container
+          .is-hidden-tablet
+            Serious Introspection
           with John W. Fail was a live show in Helsinki, Finland from 2015-2016.
           = ['Each week, John along with hype man Justin Tyler Tate, interviewed people about their creative process and tried to deliver a direct, communicative experience about art and performance.', "The show took place at Mad House Helsinki's Ihana Baari, and was free to attend.", "You know, we did eight shows in the first season and it was pretty time-consuming, but we were excited to come back for more in 2016.", 'We tried our best to entertain.' ].shuffle.join(' ')
           We've made videos available from all episodes of the show here for you to watch.
