--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,6 +51,7 @@
             .navbar-dropdown
               = link_to 'Kuusi Palaa', 'https://kuusipalaa.fi', class: 'navbar-item'
               = link_to 'Temporary', 'https://temporary.fi', class: 'navbar-item'
+              = link_to 'Serious Introspection', 'https://seriousintrospection.fi', class: 'navbar-item'
               = link_to 'Pixelache Living Spaces', 'http://livingspaces.pixelache.ac/', class: 'navbar-item'
               .navbar-item
                 Ptarmigan: 
