Acedia archive link and css for signup form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -145,3 +145,13 @@ footer.footer {
     }
   }
 }
+
+#mc-embedded-subscribe.button {
+  background-color: #c7d67e !important;
+  margin-left: 0.2rem;
+  color: #777;
+}
+#mc-embedded-subscribe.button:hover {
+  background-color: #777 !important;
+  color: white;
+}
