--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,10 @@ $link: #5D7104;
 @import 'slick';
 @import 'slick-theme';
 
+
+main {
+  width: 100%;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 700;
@@ -64,6 +68,14 @@ section#tweet_front {
 }
 section#bookmarks_front, .related {
   padding: 0.75rem 0;
+  border-bottom: 1px #85a205 dotted;
+  h6 {
+    margin-bottom: 0.35rem;
+    line-height: 1.2;
+  }
+  .date {
+    font-size: 0.7rem;
+  }
 }
 h1.post_title {
   margin-bottom: 0rem;
@@ -74,6 +86,9 @@ h1.post_title {
 
 }
 
+small {
+  font-size: 0.675em;
+}
 small.error {
   display: none;
 }
@@ -109,7 +124,11 @@ h3.section_heading {
   }
 }
 
+.si_podcasts {
+  display: none !important;
+}
 .content.post_body {
+  margin-top: 0.75rem;
   padding: 0 0 1.25rem 0;
 }
 
