--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -146,7 +146,22 @@ a.readmore-js-toggle {
   width: 96%;
   margin-right: 2%;
 }
+
+
 .post {
+  &.container {
+    .all_posts {
+      display: none;
+    }
+  }
+
+  .index {
+    .post_body {
+      small {
+        display: none;
+      }
+    }
+  }
   background-color: #FFFFFF;
   opacity: 0.9;
   padding: 0.5rem 2rem;
@@ -178,6 +193,7 @@ a.readmore-js-toggle {
   .post_body {
     width: 100%;
     line-height: 1.6rem;
+
   }
   .post_tags, .prev_next {
     display: none;
