--- a/app/views/posts/_post_sidebar.html.haml
+++ b/app/views/posts/_post_sidebar.html.haml
@@ -4,7 +4,7 @@
 - unless @post.related.empty?
   %h3.subtitle Related posts:
 
-  - @post.related.sort_by{|x| x.updated_at }.reverse[0..5].in_groups_of(3).each do |group|
+  - @post.related.sort_by{|x| x.created_at }.reverse[0..5].in_groups_of(3).each do |group|
     - group.each do |related|
       - next if related.nil?
       .related
@@ -13,7 +13,7 @@
           %figure.image= image_tag related.image.url(:midsize).gsub(/development/, 'production')
         - elsif !related.photos.empty?
           %figure.image= image_tag related.photos.first.filename.url(:midsize).gsub(/development/, 'production')
-        %medium.date= l related.created_at.to_date, :format => :long
+        %small.date= l related.created_at.to_date, :format => :long
 
 .share_this= render partial: 'shared/share_buttons', locals: {url:  CGI::escape("http://#{request.host}#{request.port != 80 ? ":" + request.port.to_s : ''}#{url_for(@post)}"), title: CGI::escape(@post.title)}
 
