--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -98,7 +98,7 @@ a.readmore-js-toggle {
     margin-right: 2%;
     h3 {
       margin-bottom: 0.2rem;
-      line-height: 2rem;
+      line-height: 1.3;
       font-family: 'Arial Black', 'Arial', sans-serif;
     }
     h6 {
@@ -153,6 +153,9 @@ a.readmore-js-toggle {
     .all_posts {
       display: none;
     }
+  }
+  small {
+    font-size: 0.65rem;
   }
 
   .index {
