--- a/app/views/layouts/seriousintrospection.html.haml
+++ b/app/views/layouts/seriousintrospection.html.haml
@@ -31,6 +31,7 @@
           .menu
             %ul.top_menu
               %li= link_to 'Podcasts', '/tags/podcast'
+              %li= link_to 'Videos', '/tags/video'
               %li= link_to 'Services', 'https://services.seriousintrospection.fi', target: :_blank
               %li= link_to 'Subscribe', 'https://itunes.apple.com/us/podcast/serious-introspection/id1057015274', target: :_blank
               %li= link_to 'SI on FB', 'https://www.facebook.com/seriousintrospectionwithjohnwfail/', target: :_blank
