restoring icewhistle cv print css

--- a/app/views/layouts/cv.html.erb
+++ b/app/views/layouts/cv.html.erb
@@ -9,7 +9,7 @@
    <%= stylesheet_link_tag 'icewhistle' %>
   <%= javascript_include_tag 'application'  %>
   
-  <link rel="stylesheet" href="/assets/printcv.css" media="print" />
+  <link rel="stylesheet" href="/assets/icewhistle-cv.css" media="print" />
 </head>
 <body>
 
