--- a/app/views/layouts/cv.html.erb
+++ b/app/views/layouts/cv.html.erb
@@ -6,10 +6,11 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>curriculum vitae</title>
   <%= stylesheet_link_tag 'icewhistle-cv' %>
-   <%= stylesheet_link_tag 'icewhistle' %>
+
   <%= javascript_include_tag 'application'  %>
   
   <link rel="stylesheet" href="/assets/icewhistle-cv.css" media="print" />
+  <link rel="stylesheet" href="/assets/print-extras.css" media="print" />
 </head>
 <body>
 
