--- a/app/views/frontpage/_acedia.html.haml
+++ b/app/views/frontpage/_acedia.html.haml
@@ -5,11 +5,7 @@
         %h3.subtitle Subscribe to Acedia!
         %p.content.is-size-6
           %em Acedia
-          is an email newsletter I send very rarely, no more than once per week (but more like a few times a year), which details my thoughts, observations, media intake, and other news. It is loosely modelled after the now-defunct
-          %em The New Vulgate
-          by Joe Carducci and Warren Ellis's
-          %em Orbital Operations. Acedia
-          exists because I prefer email over Facebook/Twitter and other Internet communication methods.
+          is an email newsletter I send very rarely, no more than once per week (but more like a few times a year), which details my thoughts, observations, media intake, and other news.
           %br/
           %small
             = link_to 'See past issues', 'https://us12.campaign-archive.com/home/?u=f59423a6fc45ef468b3ed9c2a&id=9bef430f80', class: [:button, 'is-small'], style: 'font-size: 0.75rem !important'
