--- a/app/views/frontpage/_image_top_post.haml
+++ b/app/views/frontpage/_image_top_post.haml
@@ -22,8 +22,10 @@
 .content
   %p
     - if Nokogiri::HTML.parse(post.body).css('p').empty?
-      = raw post.body
+      = raw truncate_html(post.body, length: 250)
     - else
-      = raw Nokogiri::HTML.parse(post.body).css('p').first.text
+      -# = raw truncate_html(Nokogiri::HTML.parse(post.body).css('p').first.text, length: 450)
+      -# = raw truncate_html(Nokogiri::HTML.parse(post.body).css('p').to_s, length: 450)
+      = raw truncate_html(Sanitize.fragment(post.body, elements: ['b', 'em', 'strong', 'a', 'p', 'br', 'i', 'italic']), length: 600)
   = link_to 'Read more', post, :class => [:button, :tiny]
   
